force-app/main/default/objects/ServiceResource/fields/Dispatch_Policy__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Policy__c</fullName>
    <label>Dispatch Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drip Feed</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>