force-app/main/default/objects/ServiceResource/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comfort Advisor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Install Apprentice</fullName>
            </value>
            <value>
                <fullName>Install Helper</fullName>
            </value>
            <value>
                <fullName>Install Tech</fullName>
            </value>
            <value>
                <fullName>Service Apprentice</fullName>
            </value>
            <value>
                <fullName>Service Master Tech</fullName>
            </value>
            <value>
                <fullName>Service Part Runner</fullName>
            </value>
            <value>
                <fullName>Service Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>