force-app/main/default/objects/ServiceResource/fields/Maintenance_Technicians__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Technicians__c</fullName>
    <formula>Case ( Job_Title__c ,
&quot;Service Apprentice&quot;,1,
10)</formula>
    <label>Maintenance Technicians</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>