force-app/main/default/objects/ServiceResource/fields/Postal_Codes__c.field-meta.xml
<CustomField>
    <fullName>Postal_Codes__c</fullName>
    <label>Postal Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>