force-app/main/default/objects/ServiceResource/fields/Primary_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the primary service territory of the resource.
Updated upon update of the Primary STM for the resource</description>
    <label>Primary Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Resources</relationshipLabel>
    <relationshipName>Service_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>