force-app/main/default/objects/ServiceResource/fields/Senior_Technicians__c.field-meta.xml
<CustomField>
    <fullName>Senior_Technicians__c</fullName>
    <formula>Case ( Job_Title__c  ,
&quot;Service Master Tech&quot;,1,
&quot;Service Tech&quot;,1,
10)</formula>
    <label>Senior Technicians</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>