force-app/main/default/objects/ServiceResource/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>