force-app/main/default/objects/ServiceResource/fields/Terminated__c.field-meta.xml
<CustomField>
    <fullName>Terminated__c</fullName>
    <formula>NOT(ISNULL(Termination_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terminated</label>
    <type>Checkbox</type>
</CustomField>