force-app/main/default/objects/ServiceResource/fields/Travel_Policy__c.field-meta.xml
<CustomField>
    <fullName>Travel_Policy__c</fullName>
    <description>Indicates if the travel time to first appointment and back home from the last appointment is included in working or non working hours</description>
    <label>Travel Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel In Company Time</fullName>
            </value>
            <value>
                <fullName>Travel In Own Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>