force-app/main/default/objects/ServiceResource/listViews/All_ServiceResources.listView-meta.xml
<ListView>
    <fullName>All_ServiceResources</fullName>
    <columns>Name</columns>
    <columns>Job_Title__c</columns>
    <columns>Email__c</columns>
    <columns>Work_Mobile__c</columns>
    <columns>Travel_Policy__c</columns>
    <columns>Location</columns>
    <columns>Vehicle_Number__c</columns>
    <columns>FSL__Efficiency__c</columns>
    <columns>IsActive</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Resources</label>
</ListView>